Fixed warning about missing export lists

--- a/datastruct.cabal
+++ b/datastruct.cabal
@@ -27,11 +27,11 @@ library
   exposed-modules:
       BinaryTree
       CatenableList
+      ComplexRtqCatList
       Perm
       Queue
       RealTimeQueue
       RedBlackTree
-      RtqCatList
       Set
   other-modules:
       Paths_datastruct
